# eunomia

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: celery.py  settings.py  tasks.py  utils.py
src/clients/: external.py  s3.py
src/models/: shared.py  validators.py
src/parsers/: __init__.py  base.py  telegram.py  tiktok.py  twitter.py  twitter_apify.py
tests/: conftest.py  test_tasks.py  test_utils.py
tests/clients/: test_external.py
tests/fixtures/: twitter_apify_bad_retweet.json  twitter_apify_no_author_username.json  twitter_apify_no_retweet_author_and_mentions.json  twitter_apify_no_retweet_author_username.json  twitter_apify_retweet.json  twitter_apify_tweet.json  twitter_apify_very_bad_retweet.json
tests/models/: test_validators.py
tests/parsers/: test_base.py  test_init.py  test_telegram.py  test_tiktok.py  test_twitter.py  test_twitter_apify.py
