[tool.poetry]
name = "eunomia"
version = "0.1.0"
description = "Core service that orchestrates the normalization of raw data"
authors = [
    "Oscar Delgado <https://github.com/oscar-delgado>",
    "Francisco Javier Melchor <https://github.com/franjmelchor>"
]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "3.10.16"
pydantic-settings = "^2.8.1"
requests = "^2.32.3"
sentry-sdk = {extras = ["celery"], version = "^2.33.2"}
celery = "^5.4.0"
boto3 = "^1.37.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.2.1"
ruff = "^0.9.10"
watchdog = "^6.0.0"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-fail-under=91 --cov-report=term-missing:skip-covered"

[tool.ruff.lint]
select = ["N", "E", "W", "F", "UP", "SIM", "I", "FAST"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
